# RXLisp

./: Dockerfile  README.md  RXLispBuildDoc.txt
RXLisp/: Changes.html  DESCRIPTION  INDEX  INSTALL.html  NAMESPACE  cleanup  cleanup.in  config.status  configure  configure.in
RXLisp/R/: XLisp.S  XLispConfig.S  XLispConfig.S.in  XLispRefs.S  parseEval.S  zzz.R
RXLisp/inst/Docs/: FAQ.html  OmegaTech.css  html.css
RXLisp/inst/examples/: Rinit.lsp
RXLisp/inst/scripts/: RXLisp.bsh  RXLisp.bsh.in  RXLisp.csh  RXLisp.csh.in  inXLisp.lsp  inXLisp.lsp.in
RXLisp/inst/xlisp/: ObjectManager.lsp
RXLisp/man/: XLisp.Rd  XLispInit.Rd  XLispReference.Rd
RXLisp/src/: Converters.c  Converters.h  Makefile  Makevars  Makevars.in  RSCommon.h  RXLisp.c  RinXLisp.c
RXLisp/xlisp/: Makefile.in  install  xldmem.h  xlisp.c
RXLisp/xlisp/CVS/: Entries  Repository  Root
xlisp/: Makefile  Makefile.in  config.status  configure  configure.in  shlibconfig.sh  xlconfig.h  xlisp  xlisp.c.bak  xlisp.wks  xlispstat
xlisp/autom4te.cache/: output.0  requests  traces.0
